# expectance

./: README.md
1.0/: CMakeLists.txt
1.0/data/models/cally/: cally.cfg  cally.csf  foot_left.cmf  hand_left.cmf  idle.caf  upper_arm_left.cmf
1.0/data/models/freebie/: body.cmf  body_0.crf  eye_11.crf  eye_12.crf  freebie_walkstart.caf  hair.cmf  test_anim.caf
1.0/data/models/table/: blat.crf  skel.csf
1.0/data/textures/: ft_logo.tga  help.tga
1.0/lib/win32/debug/: glew32d.lib
1.0/lib/win32/release/: cal3d.lib
1.0/python/: guiwindow.py
1.0/src/cal3d/: cal3d.cbp  cal3d.layout  cal3d.vcproj
1.0/src/cal3d/src/: animation_action.cpp  bone.cpp  cal3d_wrapper.h  corekeyframe.cpp  coremesh.cpp  coremorphanimation.cpp  coreskeleton.cpp  coresubmesh.h  coresubmorphtarget.h  dualquaternion.cpp  error.h  hardwaremodel.cpp  loader.cpp  matrix.cpp  matrix.h  mesh.cpp  model.cpp  morphtargetmixer.h  platform.cpp  skeleton.cpp  springsystem.cpp  submesh.h  vector.cpp  vector.h
1.0/src/engine/src/core/: globalmsgsender.h  glutapp.cpp  lockmanager.cpp  updatemanager.cpp  updatemanager.h
1.0/src/engine/src/scene/: cal3dobject.h  cal3dobjectfactory.h  cal3dtype.h  cameramanager.cpp  circulararc.cpp  datacollector.cpp  scenemanager.cpp  spline.h  visualizationmanager.h
1.0/src/engine/src/ui/: menumanager.cpp  menumanager.h
1.0/src/generator/: CMakeLists.txt  generator.layout
1.0/tools/: backup.cmd  documentation.cmd
trunk/: CMakeLists.txt  Generator.doxy  Generator.sln  README.txt  automatic_build.cmd  build_all.cmd  clean_all.cmd  clean_all.sh  common.mk  documentation.cmd  expectance.sln  generator.workspace  makefile  prepare.sh  readme.txt
trunk/EditorStructures/db/: current  uuid
trunk/EditorStructures/db/revprops/: 0  1  2  3  4  5
trunk/EditorStructures/db/revs/: 1  2  3  4  5
trunk/EvolutionStudio/db/: current  uuid
trunk/EvolutionStudio/db/revprops/: 0  1  2  3
trunk/EvolutionStudio/db/revs/: 1  2  3
trunk/data/: application.cfg  motions.xml  scene.xml
trunk/data/cally/: cally.cfg  cally_walkstart.CAF  foot_right.CMF  neck.CMF  palvis.CRF  ponytail.CMF  thigh_left.CMF  upper_arm_right.CMF
trunk/data/models/ball/: ball.cfg  ball.cmf  ball.crf  skel.csf
trunk/data/models/cally/: calf_left.CMF  calf_right.CMF  cally.cfg  cally_ballerina.CAF  cally_runloop.CAF  cally_walkidle.CAF  cally_walkstop.caf  cally_walturn_right.CAF  chest.cmf  lower_arm_right.cmf  pelvis.cmf  runstart.caf  runstop.caf  skin.CRF  walkloop.caf
trunk/data/models/freebie/: body_3.crf  freebie.cfg  hair_13.crf  r_eye.cmf  walkloop.caf  walkstart.caf  walkstop.caf
trunk/data/models/table/: arc1.CMF  arc2.cmf  arc3.cmf  metal.CRF  table.cfg
trunk/data/shaders/: mesh2.vert
trunk/data/textures/: 0861_floor.tga  ceiling512x512.tga  exit.tga  floorHex3.tga  floorTexture.tga  ft_logo.tga  grassfloor128x128.tga  path.tga  pavement.tga
trunk/doc/: generator.tex  generator_doc.odt
trunk/examples/cally/: INSTALL  SConscript  TODO  cally.vcproj
trunk/examples/cally/src/: Makefile.am  demo.cpp  demo.h  menu.cpp  model.cpp  model.h  tick.cpp  tick.h
trunk/examples/miniviewer_gl/: cal3d_miniviewer.vcproj
trunk/examples/miniviewer_gl/src/: Makefile.am  global.h  main.cpp  tick.cpp  viewer.cpp  viewer.h
trunk/ext/inc/evolution/: platform.h
trunk/ext/inc/evolution/evolution/: action.h  avatar.h  blender.h  constraint.h  controller.h  entity.h  evodbg.h  factory.h  goal.h  goalcontroller.h  motion.h  rule.h  timelinecontext.h  timelineobject.h  world.h
trunk/ext/inc/evolution/gil/: gil_animation.h  gil_animdata.h  (+5 more)
trunk/lib/win32/: osg_win32_README.txt
trunk/lib/win32/debug/: cal3d_d.lib  evolution_d.lib  osgCald.lib
trunk/lib/win32/release/: boost_python-vc90-1_35.lib  cal3d.lib  evolution.lib  glew32.lib  osgCal.lib
trunk/python/: guiwindow.py  pygen.py  pygui.py  run.py
trunk/src/cal3d/: CMakeLists.txt  bone.h  buffersource.h  cal3d.aps  cal3d.cbp  cal3d.depend  cal3d.layout  cal3d.vcproj  coreanimation.cpp  corebone.cpp  corebone.h  coremesh.cpp  coremesh.h  coremodel.cpp  coremodel.h  coremorphanimation.h  coresubmesh.h  coresubmorphtarget.h  datasource.h  global.h  hardwaremodel.cpp  loader.cpp  loader.h  mesh.h  mixer.cpp  mixer.h  morphtargetmixer.h  renderer.cpp  saver.cpp  streamsource.cpp  submesh.cpp  submesh.h  vector.h
trunk/src/cal3d/cal3d/: animation.h  bone.cpp  buffersource.cpp  cal3d_wrapper.cpp  coreanimation.cpp  corematerial.cpp  corematerial.h  coreskeleton.cpp  coresubmorphtarget.cpp  loader.cpp  loader.h  matrix.h  model.cpp  model.h  physiquedualquaternion.cpp  platform.cpp  renderer.h  saver.cpp  skeleton.cpp  springsystem.cpp  streamsource.h  tinystr.h  tinyxml.h  tinyxmlerror.cpp  vector.h
trunk/src/cal3d/src/: animation.cpp  animation_action.h  animation_cycle.cpp  bone.h  buffersource.cpp  buffersource.h  cal3d.h  cal3d.rc  cal3d_wrapper.cpp  coreanimation.cpp  coreanimation.h  corebone.h  corekeyframe.h  corematerial.h  coremesh.h  coremodel.cpp  coremodel.h  coremorphanimation.h  coresubmorphtarget.cpp  datasource.h  dualquaternion.h  global.cpp  hardwaremodel.h  loader.cpp  loader.h  mesh.h  mixer.cpp  mixer.h  model.h  physique.cpp  physique.h  physiquedualquaternion.cpp  platform.h  quaternion.cpp  quaternion.h  refcounted.h  renderer.cpp  saver.cpp  saver.h  springsystem.cpp  (+7 more)
trunk/src/engine/: CMakeLists.txt  engine.cbp  engine.depend  engine.layout  engine.vcproj  makefile
trunk/src/expectance/: CMakeLists.txt  expectance.vcproj  version.txt
trunk/src/generator/: CMakeLists.txt  generator.cbp  generator.depend  generator.layout  generator.vcproj  makefile  version.txt
trunk/src/osgcal/: !ver  CMakeLists.txt  osgCal.vcproj
trunk/src/osgcal/CMakeModules/: FindCAL3D.cmake  FindOSG.cmake  FindOpenThreads.cmake  ModuleInstall.cmake  osgcalUtils.cmake
trunk/src/osgcal/applications/: CMakeLists.txt
trunk/src/osgcal/src/: CMakeLists.txt
trunk/src/pygen/: CMakeLists.txt  pygen.cbp  pygen.layout  pygen.vcproj
trunk/tools/: Generator.doxy  build.cmd  build.sh  build_all.cmd  build_all.sh  buildex.sh  readme_tools.txt
(+503 files in other folders)
